[project]
name = "hexlet-hello-world"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.poetry]
name = "hexlet-hello-world"
version = "0.1.0"
description = ""
authors = ["Daniel <shnoda39@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
more-itertools = "^10.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
